--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
         
         <!-- Corrections Panel -->
         <div class="corrections-panel">
-            <h3>Learning Points</h3>
+            <h3>Learning Points and Hints</h3>
             <div id="corrections-list" 
                  hx-get="/api/corrections?session_id=default"
                  hx-trigger="load, every 2s"
